# FunctionalProgramming

./: Block2.cabal
src/Block1/: Exercise1.hs  Exercise2.hs  Exercise2_1.hs  Exercise2_2.hs  Exercise2_3.hs  Exercise2_4.hs  Exercise2_5.hs  Exercise2_6.hs  Exercise2_7.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  Exercise7.hs  Exercise8.hs  Exercise9.hs  Main.hs
src/Block2/: Exercise1_1.hs  Exercise1_2.hs  Exercise1_3.hs  Exercise1_4.hs  Exercise1_5.hs  Exercise1_6.hs  Exercise1_7.hs  Exercise1_8.hs  Exercise2_1.hs  Exercise2_2.hs  Exercise2_3.hs  Exercise2_4.hs  Exercise2_5.hs  Main.hs
src/Block3/: Exercise3_1.hs  FP_Core.hs  Main.hs
src/Block4/: Exercise4_1.hs  Exercise4_2.hs  FP_Grammar.hs  FP_TypesEtc.hs  Main.hs  Tokenizer.hs
